# dbrew-ddtbench

./: .gitignore  AUTHORS  CHANGES  LICENSE  Makefile  Makefile.inc  README.md  config.h.in  meson.build  meson_options.txt  test.inc
analysis_scripts/: ddt_analysis.R
helper_scripts/: fullrun.sh  install_mpich.sh  install_ompi.sh
hrtimer/: hrtimer.h  ia64-gcc-itc.h  mips64-sicortex-gcc.h  ppc-gcc-tb.h  sanity-check.c  x86_32-gcc-rdtsc.h  x86_64-gcc-rdtsc.h
src_c/: Makefile  ddtbench.c  ddtbench.h  meson.build  timing.c  timing_basic.c  timing_fft2d.c  timing_lammps.c  timing_milc.c  timing_nas.c  timing_specfem3d.c  timing_wrf.c  utilities.c  wrapper.c
src_c_onesided/: Makefile  ddtbench.c  timing_basic.c  timing_fft2d.c  timing_lammps.c  timing_milc.c  timing_nas.c  timing_specfem3d.c  timing_wrf.c
src_f90/: Makefile  ddtbench.F90  module_datatypes.F90  module_timing_basic.F90  module_timing_fft2d.F90  module_timing_lammps.F90  module_timing_milc.F90  module_timing_nas.F90  module_timing_specfem3d.F90  module_timing_wrf.F90  module_utilities.F90  module_wrapper.F90
src_f90_onesided/: Makefile  ddtbench.F90  module_timing_basic.F90  module_timing_fft2d.F90  module_timing_lammps.F90  module_timing_milc.F90  module_timing_nas.F90  module_timing_specfem3d.F90  module_timing_wrf.F90
